# chordial

./: .gitignore  .tags  .tags1  CMakeLists.txt  CTestTestfile.cmake  chord.c  chord.h  chordial.service  chordial.socket  index.html  layout.html  main.c  music_note.c  notes.html
cmake/Modules/: FindJson.cmake  FindOnion.cmake
src/: chord.c  chord.h  chord_progression.h  controller.c  controller.h  helper_functions.c  helper_functions.h  interval.c  interval.h  main.c  music_note.c  music_note.h
static/: style.css
static/css/: custom.css
test/: test_chord.c  test_chord.h  test_interval.c  test_interval.h  test_main.c  test_music_note.c  test_note.c  test_note.h
views/: index.html  layout.html
